Publish basic vert.x app - 19